--- a/ticTacToe/HTMLpage.html
+++ b/ticTacToe/HTMLpage.html
@@ -13,15 +13,15 @@
 <body>
     <main>
         <div class="container">
-            <span>X</span>
-            <span>O</span>
-            <span>X</span>
-            <span>O</span>
-            <span>X</span>
-            <span>O</span>
-            <span>X</span>
-            <span>O</span>
-            <span>X</span>
+            <span data-key="0"></span>
+            <span data-key="1"></span>
+            <span data-key="2"></span>
+            <span data-key="3"></span>
+            <span data-key="4"></span>
+            <span data-key="5"></span>
+            <span data-key="6"></span>
+            <span data-key="7"></span>
+            <span data-key="8"></span>
         </div>
     </main>
 </body>
