Done with HTML CSS JS part

--- a/ticTacToe/HTMLpage.html
+++ b/ticTacToe/HTMLpage.html
@@ -24,6 +24,13 @@
             <span data-key="8"></span>
         </div>
     </main>
+
+    <div class="modalContainer">
+        <div class="modal">
+            <span>Message</span>
+            <button>Button</button>
+        </div>
+    </div>
 </body>
 
 </html>
