--- a/pairsGame/HTMLpage.html
+++ b/pairsGame/HTMLpage.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <nav>Time : 02 : 32</nav>
+    <nav>00 : 00</nav>
     <main>
         <div class="container">
         </div>
