completed the Pairs Game Project

--- a/pairsGame/HTMLpage.html
+++ b/pairsGame/HTMLpage.html
@@ -11,11 +11,18 @@
 </head>
 
 <body>
-    <nav>00 : 00</nav>
+    <nav></nav>
     <main>
         <div class="container">
         </div>
     </main>
+
+    <div class="modal">
+        <div class="modalContainer">
+            <span>Start Game!</span>
+            <button>Start</button>
+        </div>
+    </div>
 </body>
 
 </html>
