portfolio layout completed

--- a/myPortfolio/HTMLpage.html
+++ b/myPortfolio/HTMLpage.html
@@ -22,6 +22,7 @@
     </nav>
 
     <main>
+        <!-- Introduction Section -->
         <div class="introduction">
             <div class="sidebar">
                 <i class="fa-brands fa-linkedin sidebar-icon"></i>
@@ -50,16 +51,98 @@
 
                 <div class="introContentRight">
                     <span>
-                        <img src="https://res.cloudinary.com/dw0up71e2/image/upload/v1676901944/-lag3vi_ewidiz.jpg" alt="my_picture">
+                        <img src="./public/myImage.jpg"
+                            alt="my_picture">
                     </span>
                 </div>
             </div>
         </div>
 
+        <!-- Project Section -->
+        <div class="projectSection">
+            <div class="heading">
+                Projects
+            </div>
 
+            <div class="projects">
+                <div class="project">
+                    <div class="leftPart">
+                        <video controls
+                            src="https://res.cloudinary.com/dw0up71e2/video/upload/v1696861612/video_2160p_inimib.mp4"></video>
+                    </div>
+                    <div class="rightPart">
+                        <div class="title">Banter Box</div>
+                        <div class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam
+                            laborum numquam saepe porro expedita architecto consectetur. Fugit sit, quam animi eveniet
+                            error est, architecto asperiores recusandae eaque ut, consequatur in.
+                        </div>
+                        <div class="technologies">
+                            <span>ReactJS</span>
+                            <span>NodeJs</span>
+                            <span>Socket.io</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project" style="align-self: flex-end;" >
+                    <div class="leftPart">
+                        <video controls
+                            src="https://res.cloudinary.com/dw0up71e2/video/upload/v1696861612/video_2160p_inimib.mp4"></video>
+                    </div>
+                    <div class="rightPart">
+                        <div class="title">Banter Box</div>
+                        <div class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam
+                            laborum numquam saepe porro expedita architecto consectetur. Fugit sit, quam animi eveniet
+                            error est, architecto asperiores recusandae eaque ut, consequatur in.
+                        </div>
+                        <div class="technologies">
+                            <span>ReactJS</span>
+                            <span>NodeJs</span>
+                            <span>Socket.io</span>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <!-- Skills Section -->
+        <div class="skillSection">
+            <div class="heading">Skills and Technologies</div>
+            <div class="technologies">
+                <span class="tech"><img src="./public/c++.svg" alt="tech_icons">C++</span>
+                <span class="tech"><img src="./public/python.svg" alt="tech_icons">Python</span>
+                <span class="tech"><img src="./public/javascript.svg" alt="tech_icons">JavaScript</span>
+                <span class="tech"><img src="./public/html.svg" alt="tech_icons">HTML</span>
+                <span class="tech"><img src="./public/css.svg" alt="tech_icons">CSS</span>
+                <span class="tech"><img src="./public/bootstrap.svg" alt="tech_icons">Bootstrap</span>
+                <span class="tech"><img src="./public/tailwind.svg" alt="tech_icons">TailwindCSS</span>
+                <span class="tech"><img src="./public/chakraui.svg" alt="tech_icons">ChakraUI</span>
+                <span class="tech"><img src="./public/react.svg" alt="tech_icons">React</span>
+                <span class="tech"><img src="./public/git.svg" alt="tech_icons">Git</span>
+                <span class="tech"><img src="./public/nodejs.svg" alt="tech_icons">Node.js</span>
+                <span class="tech"><img src="./public/mongodb.svg" alt="tech_icons">MongoDB</span>
+                <span class="tech"><img src="./public/mysql.svg" alt="tech_icons">MySQL</span>
+                <span class="tech"><img src="./public/socketio.svg" alt="tech_icons">Socket.io</span>
+            </div>
+        </div>
 
     </main>
 
+    <footer>
+        <h2>Stay Connected</h2>
+        <div class="personalInfo">
+            <span>New Delhi, India</span>
+            <span>parthtyagicode@gmail.com</span>
+            <span>(+91) 8285635788</span>
+        </div>
+        <div class="footer-icons">
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-github"></i>
+            <i class="fa-brands fa-linkedin"></i>
+            <i class="fa-brands fa-square-x-twitter"></i>
+        </div>
+    </footer>
 
 </body>
 
