added real data to portfolio

--- a/myPortfolio/HTMLpage.html
+++ b/myPortfolio/HTMLpage.html
@@ -17,17 +17,31 @@
         <span>Call me (+91) 8285635788</span>
         <i class="fa-solid fa-phone nav-icon"></i>
         <span>/</span>
-        <span>parthtyagicode@gmail.com</span>
-        <i class="fa-solid fa-envelope nav-icon"></i>
+        <a href="mailto:parthtyagicode@gmail.com">
+            <span>parthtyagicode@gmail.com</span>
+            <i class="fa-solid fa-envelope nav-icon"></i>
+        </a>
+        <a href="https://drive.google.com/file/d/1P2EAsLrah8df8p5kZoXlSMqkroyensGr/view?usp=drive_link">
+            <button>Resume</button>
+        </a>
     </nav>
 
     <main>
         <!-- Introduction Section -->
         <div class="introduction">
             <div class="sidebar">
-                <i class="fa-brands fa-linkedin sidebar-icon"></i>
-                <i class="fa-brands fa-github sidebar-icon"></i>
-                <i class="fa-brands fa-instagram sidebar-icon"></i>
+                <a href="https://www.linkedin.com/in/parth-tyagi-0724a81b7/">
+                    <i class="fa-brands fa-linkedin sidebar-icon"></i>
+                </a>
+                <a href="https://github.com/parthtyagii">
+                    <i class="fa-brands fa-github sidebar-icon"></i>
+                </a>
+                <a href="https://twitter.com/_parthtyagii">
+                    <i class="fa-brands fa-square-x-twitter sidebar-icon"></i>
+                </a>
+                <a href="https://www.instagram.com/parth_tyagiii/">
+                    <i class="fa-brands fa-instagram sidebar-icon"></i>
+                </a>
             </div>
 
             <div class="introContent">
@@ -42,16 +56,15 @@
                     </div>
 
                     <div class="about">
-                        Hi! My name is parth.
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt repellendus ratione labore
-                        dolorum quibusdam ab, expedita distinctio alias non tempora nesciunt harum, a rem possimus
-                        reprehenderit natus! Ratione, alias optio?
+                        I'm tech enthu and loves to build websites. I've been learning and working with different web
+                        technologies. Aspiring to be a great software developer and would love to connect if you are on
+                        the similiar journey.
                     </div>
                 </div>
 
                 <div class="introContentRight">
                     <span>
-                        <img src="./public/myImage.jpg"
+                        <img src="https://res.cloudinary.com/dw0up71e2/image/upload/v1696935916/me-removebg-preview-removebg-preview_sfjxsg.png"
                             alt="my_picture">
                     </span>
                 </div>
@@ -68,37 +81,66 @@
                 <div class="project">
                     <div class="leftPart">
                         <video controls
-                            src="https://res.cloudinary.com/dw0up71e2/video/upload/v1696861612/video_2160p_inimib.mp4"></video>
+                            src="https://res.cloudinary.com/dw0up71e2/video/upload/v1696933074/banterbox_okxkpr.mp4"></video>
                     </div>
                     <div class="rightPart">
-                        <div class="title">Banter Box</div>
-                        <div class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam
-                            laborum numquam saepe porro expedita architecto consectetur. Fugit sit, quam animi eveniet
-                            error est, architecto asperiores recusandae eaque ut, consequatur in.
+                        <div class="title">
+                            <a href="https://github.com/parthtyagii/BanterBox_Frontend">Banter Box</a>
+                        </div>
+                        <div class="description">
+                            Banter Box is a chat application that allows users to communicate in real time.
+                            Users can create an account and search for the existing user to send a one-to-one chat.
+                            Also, we can create a room for the group chat and the admin will control the group.
                         </div>
                         <div class="technologies">
-                            <span>ReactJS</span>
-                            <span>NodeJs</span>
+                            <span>React</span>
+                            <span>Node.js</span>
+                            <span>MongoDB</span>
                             <span>Socket.io</span>
+                            <span>ChakraUI</span>
                         </div>
                     </div>
                 </div>
 
-                <div class="project" style="align-self: flex-end;" >
+                <div class="project" style="align-self: flex-end;">
                     <div class="leftPart">
                         <video controls
-                            src="https://res.cloudinary.com/dw0up71e2/video/upload/v1696861612/video_2160p_inimib.mp4"></video>
+                            src="https://res.cloudinary.com/dw0up71e2/video/upload/v1696933486/shoozy_2_e8uksq.mp4"></video>
                     </div>
                     <div class="rightPart">
-                        <div class="title">Banter Box</div>
-                        <div class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam
-                            laborum numquam saepe porro expedita architecto consectetur. Fugit sit, quam animi eveniet
-                            error est, architecto asperiores recusandae eaque ut, consequatur in.
+                        <div class="title">
+                            <a href="https://github.com/parthtyagii/Shoozy_Frontend">Shoozy</a>
+                        </div>
+                        <div class="description">
+                            The website offers a user-friendly and intuitive interface that allows customers to
+                            easily browse and purchase shoes from a vast collection of brands and styles.
+                            You can also browse through the various categories of shoes, and search for specific
+                            brands or styles.
                         </div>
                         <div class="technologies">
-                            <span>ReactJS</span>
-                            <span>NodeJs</span>
-                            <span>Socket.io</span>
+                            <span>React</span>
+                            <span>Node.js</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project">
+                    <div class="leftPart">
+                        <video controls
+                            src="https://res.cloudinary.com/dw0up71e2/video/upload/v1696934113/blogg_ooailt.mp4"></video>
+                    </div>
+                    <div class="rightPart">
+                        <div class="title">
+                            <a href="https://github.com/parthtyagii/BlogWebsiteMern">Blogg</a>
+                        </div>
+                        <div class="description">
+                            It is a Blogging website that allows users to write, edit and delete their blogs.
+                            Users can edit their profile credentials, add or removes profile images, and delete account.
+                        </div>
+                        <div class="technologies">
+                            <span>React</span>
+                            <span>Node.js</span>
+                            <span>MongoDB</span>
                         </div>
                     </div>
                 </div>
@@ -110,20 +152,47 @@
         <div class="skillSection">
             <div class="heading">Skills and Technologies</div>
             <div class="technologies">
-                <span class="tech"><img src="./public/c++.svg" alt="tech_icons">C++</span>
-                <span class="tech"><img src="./public/python.svg" alt="tech_icons">Python</span>
-                <span class="tech"><img src="./public/javascript.svg" alt="tech_icons">JavaScript</span>
-                <span class="tech"><img src="./public/html.svg" alt="tech_icons">HTML</span>
-                <span class="tech"><img src="./public/css.svg" alt="tech_icons">CSS</span>
-                <span class="tech"><img src="./public/bootstrap.svg" alt="tech_icons">Bootstrap</span>
-                <span class="tech"><img src="./public/tailwind.svg" alt="tech_icons">TailwindCSS</span>
-                <span class="tech"><img src="./public/chakraui.svg" alt="tech_icons">ChakraUI</span>
-                <span class="tech"><img src="./public/react.svg" alt="tech_icons">React</span>
-                <span class="tech"><img src="./public/git.svg" alt="tech_icons">Git</span>
-                <span class="tech"><img src="./public/nodejs.svg" alt="tech_icons">Node.js</span>
-                <span class="tech"><img src="./public/mongodb.svg" alt="tech_icons">MongoDB</span>
-                <span class="tech"><img src="./public/mysql.svg" alt="tech_icons">MySQL</span>
-                <span class="tech"><img src="./public/socketio.svg" alt="tech_icons">Socket.io</span>
+                <span class="tech"><img src="https://res.cloudinary.com/dw0up71e2/image/upload/v1696935913/c_is0gu5.svg"
+                        alt="tech_icons">C++</span>
+                <span class="tech"><img
+                        src="https://res.cloudinary.com/dw0up71e2/image/upload/v1696935916/python_aubvuu.svg"
+                        alt="tech_icons">Python</span>
+                <span class="tech"><img
+                        src="https://res.cloudinary.com/dw0up71e2/image/upload/v1696935914/javascript_scdvib.svg"
+                        alt="tech_icons">JavaScript</span>
+                <span class="tech"><img
+                        src="https://res.cloudinary.com/dw0up71e2/image/upload/v1696935914/html_ruvhr2.svg"
+                        alt="tech_icons">HTML</span>
+                <span class="tech"><img
+                        src="https://res.cloudinary.com/dw0up71e2/image/upload/v1696935913/css_ptj6oq.svg"
+                        alt="tech_icons">CSS</span>
+                <span class="tech"><img
+                        src="https://res.cloudinary.com/dw0up71e2/image/upload/v1696935913/bootstrap_zahw7j.svg"
+                        alt="tech_icons">Bootstrap</span>
+                <span class="tech"><img
+                        src="https://res.cloudinary.com/dw0up71e2/image/upload/v1696935917/tailwind_i2ntfq.svg"
+                        alt="tech_icons">TailwindCSS</span>
+                <span class="tech"><img
+                        src="https://res.cloudinary.com/dw0up71e2/image/upload/v1696935913/chakraui_dwkzln.svg"
+                        alt="tech_icons">ChakraUI</span>
+                <span class="tech"><img
+                        src="https://res.cloudinary.com/dw0up71e2/image/upload/v1696935916/react_fr6vyi.svg"
+                        alt="tech_icons">React</span>
+                <span class="tech"><img
+                        src="https://res.cloudinary.com/dw0up71e2/image/upload/v1696935913/git_obqokp.svg"
+                        alt="tech_icons">Git</span>
+                <span class="tech"><img
+                        src="https://res.cloudinary.com/dw0up71e2/image/upload/v1696935915/nodejs_pwu0br.svg"
+                        alt="tech_icons">Node.js</span>
+                <span class="tech"><img
+                        src="https://res.cloudinary.com/dw0up71e2/image/upload/v1696935915/mongodb_ulggmq.svg"
+                        alt="tech_icons">MongoDB</span>
+                <span class="tech"><img
+                        src="https://res.cloudinary.com/dw0up71e2/image/upload/v1696935915/mysql_lb5rgq.svg"
+                        alt="tech_icons">MySQL</span>
+                <span class="tech"><img
+                        src="https://res.cloudinary.com/dw0up71e2/image/upload/v1696935917/socketio_u1g85q.svg"
+                        alt="tech_icons">Socket.io</span>
             </div>
         </div>
 
@@ -133,14 +202,22 @@
         <h2>Stay Connected</h2>
         <div class="personalInfo">
             <span>New Delhi, India</span>
-            <span>parthtyagicode@gmail.com</span>
+            <span><a href="mailto:parthtyagicode@gmail.com">parthtyagicode@gmail.com</a></span>
             <span>(+91) 8285635788</span>
         </div>
         <div class="footer-icons">
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-github"></i>
-            <i class="fa-brands fa-linkedin"></i>
-            <i class="fa-brands fa-square-x-twitter"></i>
+            <a href="https://www.linkedin.com/in/parth-tyagi-0724a81b7/">
+                <i class="fa-brands fa-linkedin"></i>
+            </a>
+            <a href="https://github.com/parthtyagii">
+                <i class="fa-brands fa-github"></i>
+            </a>
+            <a href="https://twitter.com/_parthtyagii">
+                <i class="fa-brands fa-square-x-twitter"></i>
+            </a>
+            <a href="https://www.instagram.com/parth_tyagiii/">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
         </div>
     </footer>
 
