done with the layout

--- a/myPortfolio/HTMLpage.html
+++ b/myPortfolio/HTMLpage.html
@@ -56,9 +56,16 @@
                     </div>
 
                     <div class="about">
-                        I'm tech enthu and loves to build websites. I've been learning and working with different web
+                        I'm a tech enthu and loves to build websites. I've been learning and working with different web
                         technologies. Aspiring to be a great software developer and would love to connect if you are on
                         the similiar journey.
+                    </div>
+
+                    <div class="logo">
+                        <div class="inner">
+                            <span>Let's</span>
+                            <span>Connect</span>
+                        </div>
                     </div>
                 </div>
 
