--- a/myPortfolio/HTMLpage.html
+++ b/myPortfolio/HTMLpage.html
@@ -9,7 +9,7 @@
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./CSSpage.css">
-    <title>MyPortfolio</title>
+    <title>ParthTyagi</title>
 </head>
 
 <body>
@@ -141,8 +141,10 @@
                             <a href="https://github.com/parthtyagii/BlogWebsiteMern">Blogg</a>
                         </div>
                         <div class="description">
-                            It is a Blogging website that allows users to write, edit and delete their blogs.
-                            Users can edit their profile credentials, add or removes profile images, and delete account.
+                            With the ability to attach an image to each blog post and upload a profile picture, users
+                            can visually enhance their personal narratives. The user-friendly interface and the
+                            capabilities of the MERN stack make this website an ideal platform for users to express
+                            themselves and connect with others.
                         </div>
                         <div class="technologies">
                             <span>React</span>
